<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/username"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:id="@+id/txtUsername"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:id="@+id/txtPassword"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-black"
            android:layout_below="@id/txtUsername"
            android:password="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/confirm_password"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:id="@+id/txtConfirmPassword"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-black"
            android:layout_below="@id/txtPassword"
            android:password="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:id = "@+id/btnRegister"
            android:layout_below="@id/txtConfirmPassword"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

    </RelativeLayout>
</LinearLayout>