<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TransferActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/cboPayee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:spinnerMode="dropdown" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/amount"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:id="@+id/txtAmount"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-black"
            android:layout_below="@id/cboPayee"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="15dp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-black"
            android:layout_marginLeft="30dp"
            android:text="@string/amount_info"
            android:id="@+id/txtViewMessage"
            android:layout_below="@id/txtAmount"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/description"
            android:lines="1"
            android:maxLines="5"
            android:id="@+id/txtDescription"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-black"
            android:maxLength="50"
            android:layout_below="@id/txtViewMessage"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/transfer_now"
            android:id = "@+id/btnTransferNow"
            android:layout_below="@id/txtDescription"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
    </RelativeLayout>

</LinearLayout>